# wgpu-book

./: Cargo.toml  README.md
ch01/01_window/: app.rs  main.rs
ch02/01_triangle/: first_triangle.wgsl  main.rs
ch02/02_triangle_color/: main.rs  triangle_vertex_color.wgsl
ch02/common/: app.rs  state.rs
ch03/01_point_line/: main.rs  point_line.wgsl
ch03/02_triangles/: main.rs  triangles.wgsl
ch04/01_triangle/: main.rs  vertex.rs
ch04/02_square/: main.rs  vertex.rs
ch04/03_square_index/: main.rs  state.rs  vertex.rs
ch04/common/: app.rs  state.rs  triangle.wgsl
ch05/01_scaling/: main.rs
ch05/02_translation/: main.rs
ch05/03_rotation/: main.rs
ch05/04_view_projection/: colormap.rs  main.rs
ch06/01_3D_line/: line3d.wgsl  main.rs  state.rs  vertex.rs
ch06/02_cube_face_color/: main.rs  state.rs  vertex.rs
ch06/03_cube_vertex_color/: main.rs  state.rs  vertex.rs
ch06/04_rotate_cube/: app.rs  cube_face_color.wgsl  main.rs  state.rs  vertex.rs
ch06/05_camera_control/: app.rs  camera.rs  main.rs  state.rs
ch07/01_cube/: main.rs
ch07/02_sphere/: main.rs
ch07/03_cylinder/: main.rs
ch07/04_cone/: main.rs
ch07/05_torus/: main.rs
ch07/common/: app.rs  line3d.wgsl  state.rs  vertex.rs
ch08/01_cube/: main.rs
ch08/02_sphere/: main.rs
ch08/03_cylinder/: main.rs
ch08/04_cone/: main.rs
ch08/05_torus/: main.rs
ch08/common/: app.rs  light.rs  shader.wgsl  state.rs  vertex.rs
ch09/01_sinc/: main.rs
ch09/02_peaks/: main.rs
ch09/03_klein_bottle/: main.rs
ch09/04_wellenkugel/: main.rs
ch09/05_seashell/: main.rs
ch09/06_sievert_enneper/: main.rs
ch09/07_breather/: main.rs
ch09/common/: app.rs  shader.wgsl  state.rs  vertex.rs
ch10/01_cube/: main.rs
ch10/02_sphere/: main.rs
ch10/03_cylinder/: main.rs
ch10/04_sinc/: main.rs
ch10/05_peaks/: main.rs
ch10/06_klein_bottle/: main.rs
ch10/07_wellenkugel/: main.rs
ch10/common/: app.rs  shader.wgsl  state.rs  vertex.rs
ch11/01_sinc/: main.rs
ch11/02_peaks/: main.rs
ch11/03_sphere/: main.rs
ch11/04_torus/: main.rs
ch11/05_klein_bottle/: main.rs
ch11/06_wellenkugel/: main.rs
ch11/common/: app.rs  shader.wgsl  state.rs  vertex.rs
ch12/01_two_cubes/: app.rs  main.rs  state.rs  two_cubes.wgsl  vertex.rs
ch12/02_cube_instance/: cube_instance.wgsl  main.rs  state.rs
ch12/03_different_objects/: main.rs
ch12/04_multiple_pipelines/: app.rs  main.rs  shader.wgsl  state.rs  vertex_cube.rs  vertex_sphere.rs
ch12/05_chart_pipelines/: app.rs  light.rs  main.rs  mesh.wgsl  state.rs
ch12/06_chart_axes/: axes.wgsl  main.rs  shader.wgsl  state.rs  vertex_axes.rs  vertex_mesh.rs  vertex_surface.rs
ch12/07_multiple_render_passes/: main.rs  state.rs  vertex_mesh.rs
ch13/01_rotate2d/: main.rs  rotate2d.wgsl
ch13/02_boids/: app.rs  boids.wgsl  main.rs  state.rs
ch13/03_attractors/: app.rs  attractors.wgsl  main.rs  state.rs
ch13/04_particles/: app.rs  main.rs  particles.wgsl  state.rs
ch14/01_domain_color/: app.rs  cmath_func.wgsl  domain_color.wgsl  main.rs  state.rs
ch14/02_iterate_func/: iterate_func.wgsl  main.rs  state.rs
ch14/03_mandelbrot/: app.rs  main.rs  mandelbrot.wgsl  state.rs
ch14/04_julia_set/: app.rs  julia_set.wgsl  main.rs  state.rs
ch14/05_mandelbulb/: app.rs  main.rs  mandelbulb.wgsl  state.rs
ch14/06_mandelbrot3d/: main.rs  mandelbrot3d.wgsl  state.rs
ch14/07_mandelbox/: main.rs  mandelbox.wgsl  state.rs
src/: lib.rs  math_func.rs  surface_data.rs  texture_data.rs  transforms.rs  vertex_data.rs  wgpu_simplified.rs
